--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
 click==8.1.3
 colorama==0.4.5
 Flask==2.1.2
+Flask-Cors==3.0.10
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+PyMySQL==1.0.2
+six==1.16.0
+SQLAlchemy==1.4.39
 Werkzeug==2.1.2
 zipp==3.8.0
